Fix coverpage for bacharel degree

--- a/personaldataofthesis.tex
+++ b/personaldataofthesis.tex
@@ -1,5 +1,5 @@
 \def\thetitle{%
- [Título da dissertacao, do Projecto ou do Relatorio de Estágio]
+ [Título da dissertação, do Projecto ou do Relatório de Estágio]
 }
 \def\theauthor{%
  [Nome completo do autor]
