Fix bibliography style: biblatex

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,29 +1,31 @@
 @MISC{primes,
    author = "Charles Louis Xavier Joseph de la Vall{\'e}e Poussin",
    note = "A strong form of the prime number theorem, 19th century",
-   year = 1879
+   year = "1879"
    }
 
-@INBOOK{chicago,
-   title = "The Chicago Manual of Style",
+@BOOK{chicago,
+ 	author={Webster, Gretchen},
+   title = "{The Chicago Manual of Style}",
    publisher = "University of Chicago Press",
-   edition = "Thirteenth",
-   year = 1982,
+   edition = "17th edition",
+   year = 2017,
    pages = "400--401",
-   key = "Chicago"
+   key = "Chicago",
+   isbn = "	978-0-226-28705-8"
    }
 
 @BOOK{texbook,
    author = "Donald E. Knuth",
    title= "The {{\texttt{TeX}}book}",
-   publisher = "Addison-Wesley",
+   publisher = "Addison-Wesley Publisher",
    year = 1984
    }
 
 @BOOK{latexbook,
    author = "Leslie Lamport",
    title = "{\texttt{LaTeX} \rm:} {A} Document Preparation System",
-   publisher = "Addison-Wesley",
+   publisher = "Addison-Wesley Publisher",
    year = 1986
    }
 
@@ -45,11 +47,13 @@
    }
 
 @BOOK{strunk,
-   author = "Strunk, Jr., William and E. B. White",
-   title = "The Elements of Style",
-   publisher = "Macmillan",
-   edition = "Third",
-   year = 1979
+   author = "Strunk, William and Richard De A'Morelli",
+   title = "The Elements of Style: Classic Edition",
+   publisher = "Spectrum Ink Publisher",
+   edition = "1st edition",
+   Publisher: Spectrum Ink (23 July 2018),
+  ISBN =  "978-1-64399-000-2",
+   year = 2018
    }
 
 @book{vanleunen,
