--- a/thesisisel.cls
+++ b/thesisisel.cls
@@ -765,30 +765,29 @@ de Mestre \\em \@majorfield}
 \def\@enabstractfile{~enabstractfile \@notdefined}
 \fi\fi
 
-\def\printabstract{%	
-	\ifx\@language0 % Sumário-PT + Abstract-EN for thesis in Portuguese
+\def\printabstract{%
+	\if\@language0   % Sumário-PT + Abstract-EN for thesis in Portuguese
 		\selectlanguage{portuguese}
-		\if{\@degreetype1\@degreetype3}
 		\@input@{Chapters/\@ptabstractfile}\global\let\@ptabstractfile\@empty
 		\ifx\@enabstractfile\@empty
 		\else
 			\selectlanguage{english}
 			\@input@{Chapters/\@enabstractfile}\global\let\@enabstractfile\@empty
 			\selectlanguage{portuguese}
-		\fi\fi
-	\else\ifx\@language1   % Abstract-EN + Sumário-PT for thesis in English
+		\fi
+	\else\if\@language1   % Abstract-EN + Sumário-PT for thesis in English
 		\selectlanguage{english}
-		\if{\@degreetype1\@degreetype3}
 		\@input@{Chapters/\@enabstractfile}\global\let\@enabstractfile\@empty
 		\ifx\@ptabstractfile\@empty
 		\else
 			\selectlanguage{portuguese}
 			\@input@{Chapters/\@ptabstractfile}\global\let\@ptabstractfile\@empty
 			\selectlanguage{english}
-		\fi\fi
+		\fi
 	\fi\fi
 }
 
+ 	
 \def\thesismainmatter{%
 	\mainmatter
 	\pagestyle{fancy}
